# phograph

./: .gitignore  PRIVACY.md  README.md  project.yml  test_examples.py  test_harness.cc
.github/workflows/: pages.yml
Phograph.xcodeproj/: project.pbxproj
Phograph.xcodeproj/xcshareddata/xcschemes/: Phograph.xcscheme
Phograph/App/: ContentView.swift  PhographApp.swift
Phograph/Assets.xcassets/AppIcon.appiconset/: Contents.json
Phograph/Bridge/: Phograph-Bridging-Header.h  PhographBridge.h  PhographBridge.mm  pho_platform_apple.mm
Phograph/Export/: AppExporter.swift  AppTemplates.swift
Phograph/Metal/: MetalRenderer.swift  Shaders.metal
Phograph/Model/: ExampleCatalog.swift  GraphExporter.swift  GraphModel.swift  LibraryModel.swift  ProjectModel.swift
Phograph/Runtime/: PhographRuntime.swift  PhographSceneRuntime.swift
Phograph/ViewModels/: DebuggerViewModel.swift  GraphEditorViewModel.swift  IDEViewModel.swift  LibraryManager.swift
Phograph/Views/Browser/: ClassBrowserView.swift
Phograph/Views/Canvas/: CanvasOutputView.swift  GraphCanvasView.swift  PhographCanvasView.swift
Phograph/Views/Debugger/: CallStackView.swift  DebuggerControlsView.swift  TraceOverlayView.swift
Phograph/Views/IDE/: ExampleBrowserView.swift  ExportAppSheet.swift  FrontPanelView.swift  FuzzyFinderPopup.swift  IDEWorkspaceView.swift  LibraryManagerView.swift  ToolbarView.swift
Phograph/Views/Inspector/: InspectorPanelView.swift
docs/: issues.md  library_management_design.md  prograph_language.md  promotion.md  top_100_python_libraries.md
examples/: asteroid_dodge.json  bank_account.json  basic_arithmetic.json  bitmap__red_square.json  bouncing_ball.json  breakout.json  catalog.json  counter.json  crypto__sha_256_hash.json  crypto__uuid_generator.json  dictionary_phonebook.json  drawing_shapes.json  email_validator.json  factorial.json  fibonacci.json  fileio__write_and_read.json  hello_world.json  http_get.json  json_parse.json  list_operations.json  locale__system_info.json  math__fibonacci.json  math__prime_check.json  password_strength.json  point__init_.json  pong.json  quadratic_formula.json  shapes__inheritance_.json  shopping_cart.json  snake.json  sound__play_sine_tone.json  string_reverse.json  temperature_converter.json  todo_list.json  validator.json  word_count.json
libraries/bitmap/: library.json
libraries/crypto/: library.json
libraries/fileio/: library.json
libraries/image/: library.json
libraries/locale/: library.json
libraries/math/: library.json
libraries/midi/: library.json
libraries/net/: library.json
libraries/socket/: library.json
libraries/sound/: library.json
phograph_core/: CLAUDE.md  CMakeLists.txt
phograph_core/src/: pho_bridge.cc  pho_bridge.h  pho_codegen.cc  pho_codegen.h  pho_debug.cc  pho_debug.h  pho_draw.cc  pho_draw.h  pho_eval.cc  pho_eval.h  pho_fuzzy.h  pho_graph.h  pho_ide_render.h  pho_mem.h  pho_platform.h  pho_platform_stub.cc  pho_prim.cc  pho_prim.h  pho_prim_anim.cc  pho_prim_arith.cc  pho_prim_bitmap.cc  pho_prim_canvas.cc  pho_prim_channel.cc  pho_prim_compare.cc  pho_prim_crypto.cc  pho_prim_data.cc  pho_prim_date.cc  pho_prim_dict.cc  pho_prim_draw.cc  pho_prim_effect.cc  pho_prim_error.cc  pho_prim_fileio.cc  pho_prim_future.cc  pho_prim_image.cc  pho_prim_input.cc  pho_prim_io.cc  pho_prim_list.cc  pho_prim_locale.cc  pho_prim_logic.cc  pho_prim_math.cc  (+16 more)
phograph_core/src/plugins/: MIDIPlugin.cpp  MIDIPlugin.h  SoundPlugin.cpp  SoundPlugin.h
phograph_core/tests/: test_bridge.cc  test_comprehensive.cc  test_e2e_compile.cc  test_eval.cc  test_phase10.cc  test_phase11_28.cc  test_phase2.cc  test_phase3.cc  test_phase6.cc  test_phase7.cc  test_phase8.cc  test_phase9.cc  test_scene.cc
scripts/: gen_icon.py
site/: guide.html  index.html  reference.html
site/css/: style.css
site/lessons/: 01-hello-world.html  02-data-and-constants.html  03-arithmetic.html  04-methods.html  05-control-flow.html  06-strings-and-lists.html  07-classes.html  08-debugging.html  09-execution-wires.html  10-json-and-dates.html  11-loops.html  12-list-annotations.html  13-networking.html  14-local-methods.html  15-front-panel.html
tests/: test_libraries.sh
